# ckb-did-plc-utils

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  checksums.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yaml
contracts/ckb-did-plc-registry/: Cargo.toml  README.md
contracts/ckb-did-plc-registry/src/: entry.rs  error.rs  main.rs
contracts/did-web5-ts/: Cargo.toml  Makefile  README.md  build.rs
contracts/did-web5-ts/molecules/: cell_data.mol  witness.mol
contracts/did-web5-ts/src/: entry.rs  error.rs  main.rs  molecules.rs  type_id.rs
contracts/did-web5-ts/src/molecules/: .gitignore  cell_data.rs  witness.rs
crates/ckb-did-plc-utils/: Cargo.toml
crates/ckb-did-plc-utils/src/: error.rs  lib.rs  operation.rs  pubkey.rs  reader.rs
deployment/testnet/: deployment.toml
deployment/testnet/migrations/: 2025-06-18-055806.json  2025-07-08-053404.json  2025-07-28-015211.json
scripts/: reproducible_build_docker
tests/: Cargo.toml
tests/rust/: Cargo.toml
tests/rust/src/: test_vectors.rs
tests/src/: test_vectors.rs  tests.rs
tools/gen-test-vectors/: package.json  tsconfig.json
tools/gen-test-vectors/src/: index.ts
ts-tests/ckb-did-plc-registry-tests/: package.json
ts-tests/ckb-did-plc-registry-tests/src/: index.test.ts
ts-tests/did-web5-ts/: package.json
ts-tests/did-web5-ts/src/: coverage.ts  index.test.ts  index.ts  molecule.ts  plc.ts
ts-tests/did-web5-ts/src/__snapshots__/: index.test.ts.snap
