[workspace]
resolver = "2"

members = [ "crates/ckb-did-plc-utils",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "tests/rust",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
debug = false
