[package]
name = "did-web5-ts"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.17.2", default-features = false, features = ["ckb-types", "allocator", "ckb-types", "dummy-atomic", "type-id"] }
ckb-did-plc-utils = { path = "../../crates/ckb-did-plc-utils" }
log = { version = "0.4", optional = true, default-features = false }
molecule = { version = "0.9.0", default-features = false }
ckb-hash = { version = "0.200.0", default-features = false, features = ["ckb-contract",] }
base32 = "0.5.1"

[features]
default = []
enable_log = ["log", "ckb-std/log", "ckb-did-plc-utils/enable_log"]

[build-dependencies]
molecule-codegen = { version = "0.9.0", features = ["compiler-plugin"]}
